# code_naf_grpo

./: NACE_Rev2.1_Structure_Explanatory_Notes_EN.xlsx  code_test.ipynb  find_NACE.py  main.py  model_mcp.py  nace_builder.py  nace_navigator.py  node.py  package-lock.json  pyproject.toml
